Use Java 8 compiler for plugin classes